# codecrafters-redis-cpp

./: .gdbinit  .gitignore  CI_CD_SUMMARY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  build_and_run.sh  debug_build.sh  package.json  quick-test.sh  run-e2e-tests.sh  run_tests.sh  test-runner.js  vcpkg.json  your_program.sh
.github/: copilot-instructions.md
.github/workflows/: README.md  build.yml  test.yml
e2e.tests/: package.json  server.e2e.test.js  test-redis-cli.js  test-server.js
scripts/: build-debug.sh  run-dev.sh  run-e2e-tests.sh  run-prod.sh  run-test.sh
src/: CMakeLists.txt  Debug.md  Server.cpp  handle_command.cpp  kv_store.cpp  resp_parser.cpp
src/include/: handle_command.h  kv_store.h  resp_datatypes.h  resp_parser.h  store.h  store_value.h
src/tests/: kv_store_test.cpp  store_test.cpp
tests/: CMakeLists.txt  README.md  cli.e2e.test.js  package-lock.json  package.json  server.e2e.test.js  store_value_test.cpp  test-redis-cli.js  test-server.js  tests jest and setup.md
